# coco

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.server  Dockerfile.worker  README.md  TASK copy.md  TASK.md  docker-compose.yml  openapi.json  sources.json  tasks.md
.github/workflows/: ci.yml  docker.yml  release.yml  sdk.yml
.tmp/: arrow-arith-52.2.0.crate
crates/coco-core/: Cargo.toml
crates/coco-core/benches/: core_bench.rs
crates/coco-core/src/: ast.rs  chunking.rs  code.rs  lib.rs  markdown.rs  protocol_validation.rs  text.rs  wasm.rs
crates/coco-core/tests/: protocol_validation.rs
crates/coco-local/: Cargo.toml
crates/coco-local/benches/: embedder_bench.rs
crates/coco-local/src/: cli.rs  embedder.rs  experiment.rs  fs.rs  grammar.rs  ids.rs  ingest.rs  lance.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  paths.rs  storage.rs  tui.rs  update.rs  watcher.rs
crates/coco-local/src/meta/: entities.rs  migration.rs  mod.rs
crates/coco-local/src/service/: app.rs  config.rs  constants.rs  embedder.rs  middleware.rs  mod.rs  query.rs  state.rs  types.rs
crates/coco-local/src/service/handlers/: docs.rs  mod.rs  system.rs
crates/coco-local/src/service/live/: grep.rs  mod.rs  refresh.rs
crates/coco-local/tests/: local_flow.rs  local_http_contract.rs  local_service.rs
crates/coco-local/tests/support/: mod.rs
crates/coco-protocol/: Cargo.toml
crates/docs-crawler/: Cargo.toml
crates/docs-crawler/src/: config.rs  crawler.rs  discovery.rs  http_client.rs  main.rs  models.rs  storage.rs  util.rs
docs/: contributing.md  experiments.md  installation.md
docs/coco/: README.md  api.md  architecture.md  configuration.md  contributing.md  experiments.md  extensions.md  installation.md  quick-start.md
docs/google-adk/: .manifest.json
docs/heroui/: .manifest.json
docs/openai-agents-js/: .manifest.json
docs/pydantic-ai/: .manifest.json
docs/react-aria/: .manifest.json
docs/react-spectrum/: .manifest.json
docs/ref-tools/: .manifest.json
docs/shadcn-ui/: .manifest.json
docs_crawler/: config.py  storage.py
plans/: code-review-improvements.md
private/coco-server/: Cargo.toml  build.rs
private/coco-server/src/: embedder.rs  lib.rs  main.rs  queue.rs  worker.proto
private/coco-server/src/service/: app.rs  config.rs  constants.rs  embedder.rs  indexing.rs  ingest.rs  limiter.rs  middleware.rs  mod.rs  openapi.rs  query.rs  state.rs  status.rs  stream.rs  types.rs  utils.rs  vector_backend.rs  worker.rs  worker_ipc.rs
private/coco-server/src/service/handlers/: docs.rs  jobs.rs  mod.rs  system.rs
private/coco-server/src/service/handlers/system/: tests.rs
private/coco-server/src/storage/: mod.rs
private/coco-server/src/storage/meta/: entities.rs  migration.rs  mod.rs
private/coco-server/src/storage/pg/: disabled.rs  mod.rs
private/coco-server/src/storage/pg/enabled/: backend.rs  backend_ops.rs  executor.rs  helpers.rs  index.rs  mod.rs  queries.rs
private/coco-server/src/storage/vector/: mod.rs  rrf.rs  tests.rs
private/coco-server/src/storage/vector/qdrant/: executor.rs  mod.rs  store.rs  store_ops.rs  util.rs
private/coco-server/tests/: server_http_contract.rs  server_http_indexing.rs  server_http_integration.rs  server_http_qdrant.rs  server_integration.rs
private/coco-server/tests/support/: mod.rs
private/coco-worker/: Cargo.toml  build.rs
private/coco-worker/src/: main.rs
scrapy_docs/: rac.md
scrapy_docs/animate-ui/: .manifest.json
scrapy_docs/react-spectrum/: .manifest.json
scripts/: build-local.sh  check-coverage.sh  check-deps.sh  check-openapi.sh  codex-tasks-sync.sh  e2e-local.sh  e2e-qdrant.sh  e2e-server.sh  generate-openapi.sh  generate-py-sdk.py  generate-ts-sdk.py  openapi-python-client.yaml  package-local.sh  perf-local-import.sh  perf-local-memory.py  perf-local-memory.sh  perf-local-query.py  perf-local-query.sh  perf-qdrant-query.py  perf-qdrant-query.sh  run-ci-integration.sh  set-sdk-version.py
scripts/perf/: perf-local-import.py
scripts/release/: build-local.sh  generate-homebrew-formula.sh  generate-scoop-manifest.sh  package-local.ps1  set-sdk-version.py
sdk/: README.md  client.ts  index.ts  package.json  tsconfig.build.json  types.ts
sdk/models/: ActivateConfigRequest.ts  ActivateConfigResponse.ts  Chunk.ts  ChunkingStrategy.ts  CocoErrorKind.ts  EmbeddingConfig.ts  ErrorResponse.ts  HealthResponse.ts  HnswParams.ts  IndexRequest.ts  IndexResponse.ts  IndexingConfig.ts  IndexingConfigResponse.ts  IngestBatchRequest.ts  IngestBatchResponse.ts  IngestChunk.ts  IngestDocument.ts  IvfPqParams.ts  JobStatusResponse.ts  ListConfigsQuery.ts  ListConfigsResponse.ts  MemoQueryRequest.ts  MemoQueryResponseEnvelope.ts  PruneRequest.ts  PruneResponse.ts  PublicFilter.ts  (+23 more)
sdk_py/: README.md  pyproject.toml
sdk_py/coco_sdk/: __init__.py  client.py  types.py
sdk_py/coco_sdk/api/docs/: import_documents.py  index_documents.py  ingest_batch.py  query_documents.py
sdk_py/coco_sdk/api/jobs/: get_job.py  job_events.py
sdk_py/coco_sdk/api/memo/: query_memos.py
sdk_py/coco_sdk/api/system/: activate_config.py  health.py  list_configs.py  openapi_json.py  prune_project.py  register_project.py  upsert_config.py
sdk_py/coco_sdk/models/: __init__.py  activate_config_request.py  activate_config_response.py  chunk.py  chunking_strategy.py  coco_error_kind.py  embedding_config.py  error_response.py  health_response.py  hnsw_params.py  index_request.py  index_response.py  indexing_config.py  indexing_config_response.py  ingest_batch_request.py  ingest_batch_response.py  ingest_chunk.py  ingest_document.py  ivf_pq_params.py  job_status_response.py  list_configs_query.py  list_configs_response.py  memo_query_request.py  memo_query_response_envelope.py  prune_request.py  prune_response.py  public_filter.py  public_filter_op.py  public_search_intent.py  query_request.py  query_response.py  query_response_envelope.py  queue_status_response.py  register_project_request.py  register_project_response.py  reranker_config.py  response_meta.py  response_status.py  retrieval_config.py  retrieval_mode.py  (+10 more)
(+8686 files in other folders)
