[workspace]
members = ["crates/*", "private/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
arrow-array = "52.2"
arrow-schema = "52.2"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
crossterm = "0.27"
env_logger = "0.11"
futures = "0.3"
lance-index = "0.17"
lancedb = "0.10"
log = "0.4"
notify = "6.1"
once_cell = "1.19"
opentelemetry = "0.22"
ort = "2.0.0-rc.6"
percent-encoding = "2.3"
pgvector = "0.4"
prost = "0.12"
protoc-bin-vendored = "3.0"
qdrant-client = "1.9"
ratatui = "0.26"
rayon = "1.10"
redis = { version = "0.25", features = ["aio", "connection-manager", "tokio-comp"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sea-orm = "0.12"
sea-orm-migration = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.10"
sysinfo = "0.30"
thiserror = "1.0"
tonic = "0.11"
tonic-build = "0.11"
tree-sitter = "0.19"
tree-sitter-markdown = "0.7"
url = "2.5"
unicode-normalization = "0.1"
utoipa = "4.2"
wasmtime = "18.0"
tokio = { version = "1.37", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19", features = ["v7"] }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[patch.crates-io]
arrow-arith = { path = "vendor/arrow-arith-52.2.0" }
redis = { path = "vendor/redis-0.25.4" }
sqlx-postgres = { path = "vendor/sqlx-postgres-0.7.4" }
