[workspace]
members = ["crates/*", "private/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
arrow-array = "56.2"
arrow-schema = "56.2"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8.1"
crossterm = "0.29.0"
env_logger = "0.11.8"
futures = "0.3.31"
lance-index = "1.0.0"
lancedb = "0.23.0"
log = "0.4.29"
notify = "8.2.0"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
ort = "2.0.0-rc.10"
percent-encoding = "2.3.2"
pgvector = "0.4.1"
prost = "0.14.1"
protoc-bin-vendored = "3.2.0"
qdrant-client = "1.16.0"
ratatui = "0.30.0"
rayon = "1.11.0"
redis = { version = "1.0.2", features = ["aio", "connection-manager", "tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sea-orm = "1.1.19"
sea-orm-migration = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.24.0"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tree-sitter = "0.19"
tree-sitter-markdown = "0.7.1"
url = "2.5.7"
unicode-normalization = "0.1.25"
utoipa = "5.4.0"
wasmtime = "40.0.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19", features = ["v7"] }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
