[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-sdk"
version = "0.0.1"
description = "CoCo Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [
  { name = "CoCo" }
]

dependencies = [
  "httpx>=0.23.0,<0.29.0",
  "attrs>=22.2.0",
  "python-dateutil>=2.8.0,<3.0.0",
]
[tool.setuptools]
packages = ["coco_sdk"]
