[package]
name = "coco-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
coco-protocol = { path = "../coco-protocol" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-markdown.workspace = true
unicode-normalization.workspace = true
wasmtime.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "core_bench"
harness = false
