[package]
name = "coco-server"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
coco-core = { path = "../../crates/coco-core" }
coco-protocol = { path = "../../crates/coco-protocol" }
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
futures.workspace = true
opentelemetry.workspace = true
prost.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true
pgvector = { workspace = true, optional = true }
qdrant-client = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }
tonic = { workspace = true, features = ["transport"] }
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[features]
default = []
server-storage = ["sea-orm", "sea-orm-migration", "pgvector"]
