[package]
name = "coco-worker"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
coco-core = { path = "../../crates/coco-core" }
coco-protocol = { path = "../../crates/coco-protocol" }
coco-server = { path = "../coco-server", features = ["server-storage"] }
chrono.workspace = true
opentelemetry.workspace = true
pgvector = { workspace = true, optional = true }
prost.workspace = true
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic = { workspace = true, features = ["transport"] }
wasmtime.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[features]
default = []
worker-storage = ["sea-orm", "pgvector"]
